fix pre overflow problem

--- a/src/css/reset/_reset.scss
+++ b/src/css/reset/_reset.scss
@@ -173,6 +173,7 @@ pre {
   direction: ltr;
   font-family: monospace, sans-serif;
   font-size: 1em;
+  overflow: auto;
 }
 kbd{
   margin: 0;
